# DB_C10

20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/: CMakeLists.txt  global_func.cmake
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/doc/html/: addressbook_8c.html  addressbook_8c.js  addressbook_8c_source.html  annotated.html  annotated.js  arm_nor_writer_8h.html  arm_nor_writer_8h_source.html  arm_nor_writer_utility_8h.html  arm_nor_writer_utility_8h_source.html  audio_8h.html  audio_8h.js  audio_8h_source.html  boot.html  boot_8h.html  boot_8h_source.html  cardlist_8c.html  cardlist_8c.js  cardlist_8c_source.html  classes.html  config_8c.html  config_8c.js  config_8c_source.html  custom__target__board_8h.html  custom__target__board_8h_source.html  custom_target_board.html  dataconv.html  dataconv_8h.html  dataconv_8h_source.html  device.html  device_8h.html  device_8h_source.html  device__info_8c.html  device__info_8c.js  device__info_8c_source.html  device_amplifier.html  device_backlight.html  device_battery.html  device_dac.html  device_gsensor.html  device_headset.html  (+1111 more)
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/openrtos/: Kconfig  def.cmake  toolchain.cmake
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/openrtos/boot/: CMakeLists.txt  init.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/openrtos/include/: i2s.h  lwipopts.h  mmio.h  stdlib.h
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/openrtos/openrtos/: CMakeLists.txt  tasks.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/alt_cpu/: config.cmake  gpio.c  ticktimer.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/bootloader/: bootloader.h  main_openrtos.c  restore.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/bootloader_stmt/: CMakeLists.txt  boot.c  main.c  main_openrtos.c  upgrade.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/codec/: CMakeLists.txt  Kconfig  codec_crt0.c  codecs_defs.h  config.cmake  default.lds  or32_crt0.S  ticktimer.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/my_NGT_DB_20191011up/: CMakeLists.txt  Kconfig  Kconfig.win32  Kconfig_dash  bsp_adc.c  bsp_communication.c  curve_moudle.c  decode.c  external.c  function_table.c  layer.cmake  layer_charge.c  layer_curve.c  layer_dynamicprogress.c  layer_esaveprogress.c  layer_logo.c  layer_main.c  layer_recoveryprogress.c  layer_testmode.c  layer_time.c  main.c  network.c  niu_db_data_ite.c  niu_db_data_ite.h  project.h  scene.c  scene.h  test_iic.c  ui_control.h  user_config.h  video.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/my_NGT_DB_20191108/: CMakeLists.txt  bsp_communication.c  bsp_gpio.c  bsp_gpio.h  comm_mem_manage.c  comm_mem_manage.h  comm_niu_type.h  external.c  function_table.c  layer.cmake  layer_bottom.c  layer_charge.c  layer_main.c  layer_stand.c  layer_upgrade.c  main.c  niu_db_data_ite.c  niu_db_data_ite.h  protocols_stm.h  scene.h  ui_control.h  video_mjpeg.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/my_NGT_DB_20200119/: CMakeLists.txt  Kconfig  appdash.cmake  comm_mem_manage.h  comm_niu_type.h  external.c  external.h  function_table.c  layer_charge.c  layer_logo.c  layer_main.c  layer_testmode.c  layer_upgrade.c  main.c  niu_export_enum.h  project.h  protocols_stm.h  scene.c  scene.h  ui_control.h  user_typedef.h
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/my_NGT_DB_20200410/: CMakeLists.txt  Kconfig  Kconfig.win32  Kconfig_dash  appdash.cmake  backup.c  bsp_communication.c  comm_mem_manage.c  comm_mem_manage.h  comm_niu_type.h  config.c  config.ini  external.c  external.h  function_table.c  layer.cmake  layer_charge.c  layer_logo.c  layer_main.c  layer_testmode.c  layer_upgrade.c  main.c  network.c  niu_db_data_ite.c  niu_db_data_ite.h  niu_export_enum.h  project.h  protocols_stm.h  scene.c  scene.h  storage.c  ui_control.h  upgrade.c  user_config.h  user_typedef.h  video.c  video_mjpeg.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/my_R1_DB_20191122/: bsp_communication.c  external.c  external.h  layer_bottom.c  layer_main.c  layer_speedpower.c  layer_sportprogress.c  layer_testmode.c  layer_time.c  niu_db_data_ite.c  niu_db_data_ite.h  niu_export_enum.h  project.h  protocols_stm.h  scene.c  storage.c  ui_control.h
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/template/: CMakeLists.txt  Kconfig  Kconfig.win32  network.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_atcmd/: Kconfig  project.cmake  test_atcmd.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_audio/: CMakeLists.txt  Kconfig  Kconfig.win32  test_i2s.docx  test_main_adc_rec_play.c  test_main_audiomgr.c  test_main_simple.c  test_main_usb.c  test_main_usb_record.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_canbus/: CMakeLists.txt  Kconfig  Kconfig_960  test_canbus.c  test_canbus_960.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_cap/: CMakeLists.txt  Kconfig  Kconfig.win32  Kconfig_EVB_977_adv7180  Kconfig_EVB_977_hdmirx  Test_cap.docx  audio_ctrl.c  audio_ctrl.h  test_hdmirx.c  test_itv.c  test_modules.c  test_sensor.c  wavheader.h
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_dashobd2/: CMakeLists.txt  Kconfig  Kconfig.win32  audio.c  layer_main.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_ftp_client/: Kconfig
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_gpio/: Kconfig  Kconfig.win32
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_iic/: CMakeLists.txt  Kconfig  Kconfig.win32  test_iic.docx
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_input/: Kconfig  test_input.docx
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_itu/: CMakeLists.txt  Kconfig  Kconfig.win32  test_tablelistbox2.c
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/project/test_lcd/: Kconfig  Kconfig.win32
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/sdk/: Kconfig  build.cmake  def.cmake
20190215_Ctrlboard_SDK_v2.3.2.1_d22119/ite_sdk/win32/: CMakeLists.txt  def.cmake
(+1334 files in other folders)
