include_directories(
    .
		${PROJECT_SOURCE_DIR}/sdk/driver/wifi_marvell/include
    ${PROJECT_SOURCE_DIR}/sdk/driver/wifi_marvell/include/ports
    ${PROJECT_SOURCE_DIR}/sdk/driver/wifi_marvell/include/byteorder		
    ${PROJECT_SOURCE_DIR}/sdk/driver/wifi_marvell/mlan
    ${PROJECT_SOURCE_DIR}/sdk/driver/wifi_marvell/mlan/esa
    ${PROJECT_SOURCE_DIR}/sdk/driver/wifi_marvell/mlan/esa/common
    ${PROJECT_SOURCE_DIR}/sdk/driver/wifi_marvell/mlinux
    ${PROJECT_SOURCE_DIR}/sdk/driver/usb/inc		
    )

    add_definitions(
        #-DCONFIG_PROC_FS
        -DSTA_SUPPORT
        -DUAP_SUPPORT
        -DSTA_WEXT
        -DUAP_WEXT
        -DSTA_CFG80211
        -DUAP_CFG80211
        -DREASSOCIATION
        #-DPROC_DEBUG
        -DDRV_EMBEDDED_AUTHENTICATOR
        -DDRV_EMBEDDED_SUPPLICANT
    )				
		
	ADD_LIBRARY(wifi_marvell
		os_dep/osdep_service.c
		os_dep/linux/os_intfs.c
		os_dep/linux/usb_intf.c
		os_dep/linux/ioctl_linux.c
		os_dep/linux/xmit_linux.c
		os_dep/linux/mlme_linux.c
		os_dep/linux/recv_linux.c
    os_dep/linux/usb_ops_linux.c   
		os_dep/ports/ite_ndis.c    
		os_dep/ports/ite_os.c
		os_dep/ports/ite_skbuf.c
		os_dep/ports/ite_timer.c   
		os_dep/ports/ite_util.c
		os_dep/ports/workqueue.c
	
		mlinux/moal_main.c
		mlinux/moal_ioctl.c
		mlinux/moal_shim.c
		mlinux/moal_eth_ioctl.c		
    mlan/mlan_shim.c
    mlan/mlan_init.c
		mlan/mlan_txrx.c
		mlan/mlan_cmdevt.c
		mlan/mlan_misc.c
		mlan/mlan_cfp.c
		mlan/mlan_module.c
		mlan/mlan_wmm.c
		mlan/mlan_usb.c
		mlan/mlan_11n_aggr.c
		mlan/mlan_11n_rxreorder.c
		mlan/mlan_11n.c
		mlan/mlan_11d.c		
		mlan/mlan_scan.c
		mlan/mlan_sta_ioctl.c
		mlan/mlan_sta_rx.c
		mlan/mlan_sta_tx.c
		mlan/mlan_sta_event.c
		mlan/mlan_sta_cmd.c
		mlan/mlan_sta_cmdresp.c
		mlan/mlan_join.c		
		mlinux/moal_priv.c 
    mlinux/moal_wext.c
		mlan/mlan_uap_ioctl.c
		mlan/mlan_uap_cmdevent.c
		mlan/mlan_uap_txrx.c
		mlinux/moal_uap.c
		mlinux/moal_uap_priv.c
		mlinux/moal_uap_wext.c
		mlinux/moal_cfg80211.c
		mlinux/moal_sta_cfg80211.c
		mlinux/moal_cfg80211.c
		mlinux/moal_uap_cfg80211.c
#		mlinux/moal_proc.c
#		mlinux/moal_debug.c
		mlan/esa/common/rc4.c
		mlan/esa/common/aes_cmac_rom.c
		mlan/esa/common/hmac_sha1.c
		mlan/esa/common/md5.c
		mlan/esa/common/mrvl_sha256_crypto.c
		mlan/esa/common/hmac_md5.c
		mlan/esa/common/crypt_new_rom.c
		mlan/esa/common/rijndael.c
		mlan/esa/common/sha1.c
		mlan/esa/common/sha256.c
		mlan/esa/common/pass_phrase.c
		mlan/esa/common/pmkCache.c
		mlan/esa/common/pmkCache_rom.c
		mlan/esa/common/parser.c
		mlan/esa/common/parser_rom.c
		mlan/esa/keyMgmtApStaCommon.c
		mlan/esa/hostsa_init.c
		mlan/esa/authenticator_api.c
		mlan/esa/keyMgmtSta.c
		mlan/esa/keyMgmtSta_rom.c
		mlan/esa/supplicant.c
		mlan/esa/AssocAp_srv_rom.c
		mlan/esa/keyMgmtAp_rom.c
		mlan/esa/keyMgmtAp.c						    
		
		)
